# torrent-telegram-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .renovaterc  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: build-publish-docker.yaml  lint-and-types.yaml  lint_and_types.yml  test-build-docker.yaml
conf/: config.qbittorrent.sample.yml  config.sample.yml  config.transmission.sample.yml
docker/rootfs/: docker-entrypoint.sh
docker/rootfs/etc/cont-init.d/: run
docker/rootfs/etc/services.d/transmission-telegram-bot/: run
docker/rootfs/opt/j2cli/: env_json.py
docker/rootfs/opt/torrent-telegram-bot/: config.yml.j2
docker/rootfs/opt/transmission-telegram-bot/: config.yml.j2
torrent_telegram_bot/: bot.py  custom_types.py  qbittorrent.py  transmission.py
transmission_telegram_bot/: bot.py  db.py  tools.py  transmission.py
