[tool.poetry]
name = "torrent-telegram-bot"
version = "0.1.2"
description = ""
authors = ["Vadim Aleksandrov <valeksandrov@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.8.0"
python-telegram-bot = {extras = ["socks", "job-queue"], version = "^20.4"}
PyYAML = "^6.0.1"
aiosqlite = "^0.19.0"
transmission-rpc = "^7.0.3"
sentry-sdk = "^1.40.4"
qbittorrent-api = "^2024.3.60"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
pyright = "^1.1.324"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]
ignore = ["A003", "C901", "E501", "ISC001"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"
exclude = ["docker"]

[tool.poetry_bumpversion.file."torrent_telegram_bot/_version.py"]