[project]
name = "torrent-telegram-bot"
version = "0.1.9"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"

authors = [
    { name = "Vadim Aleksandrov", email = "valeksandrov@me.com" }
]

dependencies = [
    "emoji (>=2.15.0,<3.0.0)",
    "python-telegram-bot[job-queue,socks] (>=22.6,<23.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "transmission-rpc (>=7.0.11,<8.0.0)",
    "sentry-sdk (>=2.54.0,<3.0.0)",
    "qbittorrent-api (>=2025.11.1,<2026.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
pyright = "^1.1.408"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90",
    "I", "N", "S", "B", "A",
    "ISC", "T20", "Q", "PTH"
]
ignore = ["A003", "C901", "E501", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
exclude = ["docker", ".venv"]

[tool.poetry_bumpversion.file."torrent_telegram_bot/_version.py"]